src/objects/Deleted_OTM__c.object
<CustomObject>
    <description>Stores the deleted OTM records for Informatica to keep parity with legacy systems.</description>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Opportunity__r.Opportunity_ID__c</formula>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deleted OTMs</relationshipLabel>
        <relationshipName>Deleted_OTMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Account Manager (TRICORN Sales Case Owner (SCO)</fullName>
                    <label>Account Manager (TRICORN Sales Case Owner (SCO))</label>
                </value>
                <value>
                    <fullName>Bid Manager</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Commercial Contract Manager</fullName>
                    <label>Commercial Contract Manager and Legal</label>
                </value>
                <value>
                    <fullName>Commercial Deal Manager Commercial War Room</fullName>
                </value>
                <value>
                    <fullName>CT Head</fullName>
                </value>
                <value>
                    <fullName>Customer Delivery Manager</fullName>
                </value>
                <value>
                    <fullName>Customer Quality Manager</fullName>
                </value>
                <value>
                    <fullName>Customer Supply Manager</fullName>
                </value>
                <value>
                    <fullName>Customer Business Controller</fullName>
                    <label>Customer Team Controller</label>
                </value>
                <value>
                    <fullName>E2E Solution Manager</fullName>
                </value>
                <value>
                    <fullName>G3 Facilitator</fullName>
                </value>
                <value>
                    <fullName>Global Sales Support SPOC</fullName>
                    <label>Global Sales Support MU Lead</label>
                </value>
                <value>
                    <fullName>Head of Sales</fullName>
                </value>
                <value>
                    <fullName>LOA Facilitator</fullName>
                </value>
                <value>
                    <fullName>Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Offer Controller</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Partner Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Pricing Manager</fullName>
                </value>
                <value>
                    <fullName>Project Contract Manager</fullName>
                </value>
                <value>
                    <fullName>Project Execution Owner</fullName>
                </value>
                <value>
                    <fullName>Project Execution Owner (TRICORN Project Execution Owner (PEO)</fullName>
                    <label>Project Execution Owner (TRICORN Project Execution Owner (PEO))</label>
                </value>
                <value>
                    <fullName>Project Procurement Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Ops Manager</fullName>
                </value>
                <value>
                    <fullName>Service Solution Manager</fullName>
                </value>
                <value>
                    <fullName>Service Solution Specialist</fullName>
                </value>
                <value>
                    <fullName>Solution Manager</fullName>
                </value>
                <value>
                    <fullName>Solution Manager (TRICORN Customer Solution Owner (CSO)</fullName>
                    <label>Solution Manager (TRICORN Customer Solution Owner (CSO))</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <formula>User__r.Email</formula>
        <label>User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deleted_OTMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fALU_Role__c</fullName>
        <formula>IF(ISPICKVAL(Team_Role__c, &quot;Bid Manager&quot;), &quot;Offer Lead&quot;, 
 IF(ISPICKVAL(Team_Role__c, &quot;Business Operations Support&quot;), &quot;Business Operations&quot;,
  IF(ISPICKVAL(Team_Role__c, &quot;CDM/Project Execution Owner&quot;), &quot;Project Manager&quot;,
   IF(ISPICKVAL(Team_Role__c, &quot;Commercial Deal Manager&quot;), &quot;Tax Officer&quot;,
    IF(ISPICKVAL(Team_Role__c, &quot;CT Head&quot;), &quot;Sales Manager&quot;,
     IF(ISPICKVAL(Team_Role__c, &quot;E2E Pricing Manager&quot;), &quot;Offer Price Lead&quot;,
      IF(ISPICKVAL(Team_Role__c, &quot;E2E Solution Manager&quot;), &quot;Tendering Lead&quot;,
       IF(ISPICKVAL(Team_Role__c, &quot;Head of Sales&quot;), &quot;Sales&quot;,
        IF(ISPICKVAL(Team_Role__c, &quot;Lead Solution Manager&quot;), &quot;Customer Solution Lead&quot;,
         IF(ISPICKVAL(Team_Role__c, &quot;Offer Controller&quot;), &quot;Offer Control&quot;,
          IF(ISPICKVAL(Team_Role__c, &quot;Pricing Manager&quot;), &quot;Offer Price Lead&quot;,
           IF(ISPICKVAL(Team_Role__c, &quot;Project Contract Manager&quot;), &quot;Legal Contract Lead&quot;,
            IF(ISPICKVAL(Team_Role__c, &quot;Project Execution Owner&quot;), &quot;Project Management Expert&quot;,
             IF(ISPICKVAL(Team_Role__c, &quot;Solution Manager&quot;), &quot;Tendering Lead&quot;,
              IF(ISPICKVAL(Team_Role__c, &quot;Solution Specialist&quot;), &quot;Tendering Support&quot;, &quot;&quot;
              )
             )
            )
           )
          )
         )
        )
       )
      )
     )
    )
   )
  )
 )
)</formula>
        <inlineHelpText>Mapping of SCRM role to fALU role</inlineHelpText>
        <label>fALU Role</label>
        <type>Text</type>
    </fields>
    <label>Deleted OTM</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Deleted OTM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deleted OTMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>